    * Minimalistic item descriptions when blinded
    * Blinking display for very low HP (always with SDL PDCurses, when
      compiled with ncurses blinking depends on terminal support)
    * Bright red warning when unarmed
    * The potion of treasure finding now detects the bank branch office
    * The potion of healing and the healing spell can now cure sickness
    * Occasionally drop arrows when disarming arrow traps
    * Lock savegame file while the game is running (prevents accidentially
      launching the game multiple times from autosaves)
    * Code cleanup

Fixed bugs:
    * Only erode player's exposed items from monster breath attacks
    * Prevent increasing max. HP with healing spell
    * Prevent wearing ring or body armour when wearing gloves or a cloak
    * Prevent swapping weapons when secondary weapon is two-handed and
      holding a shield
    * Match fountain event probabilities with those of the original Larn
    * Fixed type II demon lords (who lost all their special abilities
      with the previous release)
    * Fixed handling of itching when washing at a fountain
    * Fixed crash when reading scroll of identify without or very few
      unidentified items
    * Fixed burning of grass
    * Corrected some messages
    * Fixed some visual glitches

Release 0.7.2 (2012-07-06)
-------------

Changes:
    * Added an OS X disk image with "installer".
    * Use SDL PDCurses per default on OS X. This allows to scale the window
      and set the window icon and title when running.
    * Implemented magic resistance for monsters. The hell hound, the spirit
      naga and the demon lords and prince are now resistant to damage cause
      by magic (currently only the magic missile).
    * The spells lightning, cone of cold and fireball can now destroy doors.
    * It is now possible to target a spell while blinded.
    * Implemented the disarming of traps and the removal of traps from