@@ -18,6 +18,7 @@ Changes:
     * Bright red warning when unarmed
     * The potion of treasure finding now detects the bank branch office
     * The potion of healing and the healing spell can now cure sickness
+    * Mitigated the scroll of spell extension
     * Occasionally drop arrows when disarming arrow traps
     * Lock savegame file while the game is running (prevents accidentially
       launching the game multiple times from autosaves)
